[project]
name = "agent-shared-memory"
version = "0.1.0"
description = "Shared Memory para Agentes de IA — código original extraído da Blu Platform"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.6.0",
    "httpx>=0.27.0",
    "mcp>=1.6.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
